--- a/config.json
+++ b/config.json
@@ -26,6 +26,14 @@
             "whiteList": [
                 "127.0.0.1"
             ]
+        },
+        "options": {
+            "limits": {
+                "max": 0,
+                "delayMs": 0,
+                "delayAfter": 0,
+                "windowMs": 60000
+            }
         }
     },
     "peers": {
