--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "popsicle": "=8.2.0",
     "randomstring": "=1.1.5",
     "rimraf": "=2.5.4",
+    "semver": "=5.3.0",
     "socket.io": "=1.4.8",
     "sodium": "=1.2.3",
     "strftime": "=0.9.2",
