add new seed nodes

--- a/config.json
+++ b/config.json
@@ -39,6 +39,51 @@
     "peers": {
         "list": [
             {
+                "ip": "193.70.110.88",
+                "port": 9305
+            },
+            {
+                "ip": "178.32.203.37",
+                "port": 9305
+            },
+            {
+                "ip": "193.70.110.87",
+                "port": 9305
+            },
+            {
+                "ip": "212.24.105.142",
+                "port": 9305
+            },
+            {
+                "ip": "212.24.103.88",
+                "port": 9305
+            },
+            {
+                "ip": "45.76.33.26",
+                "port": 9305
+            },
+            {
+                "ip": "45.63.9.158",
+                "port": 9305
+            },
+            {
+                "ip": "104.40.149.89",
+                "port": 9305
+            },
+            {
+                "ip": "40.68.255.154",
+                "port": 9305
+            },
+            {
+                "ip": "40.68.250.35",
+                "port": 9305
+            },
+            {
+                "ip": "79.98.30.242",
+                "port": 9305
+            },
+
+            {
                 "ip": "108.61.196.62",
                 "port": 9305
             },
