Update seed nodes

--- a/config.json
+++ b/config.json
@@ -45,6 +45,14 @@
             {
                 "ip": "192.154.224.140",
                 "port": 9502
+            },
+            {
+                "ip": "213.32.88.105",
+                "port": 9405
+            },
+            {
+                "ip": "194.135.92.93",
+                "port": 9405
             }
         ],
         "access": {
