Four new seed nodes

--- a/config.json
+++ b/config.json
@@ -53,6 +53,22 @@
             {
                 "ip": "194.135.92.93",
                 "port": 9405
+            },
+            {
+                "ip": "45.76.143.240",
+                "port": 9405
+            },
+            {
+                "ip": "45.76.143.253",
+                "port": 9405
+            },
+            {
+                "ip": "45.76.129.173",
+                "port": 9405
+            },
+            {
+                "ip": "45.32.176.167",
+                "port": 9405
             }
         ],
         "access": {
