--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "=1.16.0",
     "bytebuffer": "=5.0.1",
     "change-case": "=3.0.1",
+    "circular-json": "=0.3.1",
     "colors": "=1.1.2",
     "commander": "=2.9.0",
     "compression": "=1.6.2",
