--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "ip": "https://github.com/ShiftNrg/node-ip/tarball/master",
     "json-schema": "=0.2.3",
     "json-sql": "https://github.com/LiskHQ/json-sql/tarball/master",
-    "lisk-sandbox": "https://github.com/ShiftNrg/lisk-sandbox/tarball/master",
+    "shift-sandbox": "https://github.com/ShiftNrg/shift-sandbox/tarball/master",
     "lodash": "=4.17.4",
     "method-override": "=2.3.7",
     "nan": "=2.2.1",
