--- a/config.json
+++ b/config.json
@@ -46,35 +46,15 @@
         "enabled": true,
         "list": [
             {
-                "ip": "192.154.224.140",
-                "port": 9501
-            },
-            {
-                "ip": "192.154.224.140",
-                "port": 9502
-            },
-            {
-                "ip": "213.32.88.105",
+                "ip": "80.209.230.17",
                 "port": 9405
             },
             {
-                "ip": "194.135.92.93",
+                "ip": "80.209.230.16",
                 "port": 9405
             },
             {
-                "ip": "45.76.143.240",
-                "port": 9405
-            },
-            {
-                "ip": "45.76.143.253",
-                "port": 9405
-            },
-            {
-                "ip": "45.76.129.173",
-                "port": 9405
-            },
-            {
-                "ip": "45.32.176.167",
+                "ip": "80.209.230.13",
                 "port": 9405
             }
         ],
@@ -100,6 +80,35 @@
     },
     "transactions": {
         "maxTxsPerQueue": 1000
+    },
+    "storage": {
+        "peers": [
+            {
+                "ip": "80.209.230.13",
+                "port": 80
+            },
+            {
+                "ip": "95.181.247.81"
+            },
+            {
+                "ip": "80.209.230.16"
+            },
+            {
+                "ip": "89.40.5.14"
+            },
+            {
+                "ip": "94.176.235.137"
+            },
+            {
+                "ip": "45.32.176.167"
+            },
+            {
+                "ip": "5.196.14.172"
+            }
+        ],
+        "options": {
+            "timeout": 5000
+        }
     },
     "forging": {
         "force": false,
