New repository, fix typos

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "jsdoc": "jsdoc -c docs/conf.json --verbose --pedantic",
     "server-docs": "npm run jsdoc && http-server docs/jsdoc/"
   },
-  "author": "Lisk Foundation <admin@lisk.io>, lightcurve GmbH <admin@lightcurve.io>, Shift Team <connect@shiftnrg.org>",
+  "author": "Shift Team <connect@shiftproject.com>, Lisk Foundation <admin@lisk.io>, lightcurve GmbH <admin@lightcurve.io>",
   "license": "GPL-3.0",
   "dependencies": {
     "async": "=2.1.4",
@@ -24,17 +24,17 @@
     "commander": "=2.9.0",
     "compression": "=1.6.2",
     "cors": "=2.8.1",
-    "decompress-zip": "https://github.com/LiskHQ/decompress-zip/tarball/master",
+    "decompress-zip": "https://github.com/shiftproject/decompress-zip/tarball/master",
     "ejs": "=2.5.5",
     "express": "=4.14.1",
     "express-domain-middleware": "=0.1.0",
     "express-query-int": "=1.0.1",
     "express-rate-limit": "=2.6.0",
     "extend": "=3.0.2",
-    "ip": "https://github.com/ShiftNrg/node-ip/tarball/master",
+    "ip": "https://github.com/shiftproject/node-ip/tarball/master",
     "json-schema": "=0.2.3",
     "json-sql": "https://github.com/LiskHQ/json-sql/tarball/master",
-    "shift-sandbox": "https://github.com/ShiftNrg/shift-sandbox/tarball/master",
+    "shift-sandbox": "https://github.com/shiftproject/shift-sandbox/tarball/master",
     "lodash": "=4.17.11",
     "method-override": "=2.3.10",
     "nan": "=2.2.1",
