--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "=1.16.0",
     "bytebuffer": "=5.0.1",
     "change-case": "=3.0.1",
+    "cids": "^0.7.1",
     "circular-json": "=0.3.1",
     "colors": "=1.1.2",
     "commander": "=2.9.0",
@@ -34,7 +35,6 @@
     "ip": "https://github.com/shiftproject/node-ip/tarball/master",
     "json-schema": "=0.2.3",
     "json-sql": "https://github.com/LiskHQ/json-sql/tarball/master",
-    "shift-sandbox": "https://github.com/shiftproject/shift-sandbox/tarball/master",
     "lodash": "=4.17.11",
     "method-override": "=2.3.10",
     "nan": "=2.2.1",
@@ -47,6 +47,7 @@
     "redis": "=2.7.1",
     "rimraf": "=2.5.4",
     "semver": "=5.3.0",
+    "shift-sandbox": "https://github.com/shiftproject/shift-sandbox/tarball/master",
     "socket.io": "=1.7.2",
     "sodium": "=1.2.3",
     "strftime": "=0.10.0",
