--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "jsdoc": "jsdoc -c docs/conf.json --verbose --pedantic",
     "server-docs": "npm run jsdoc && http-server docs/jsdoc/"
   },
-  "author": "Lisk Foundation <admin@lisk.io>, lightcurve GmbH <admin@lightcurve.io>, Shift Team",
+  "author": "Shift Team <connect@shiftproject.com>, Lisk Foundation <admin@lisk.io>, lightcurve GmbH <admin@lightcurve.io>",
   "license": "GPL-3.0",
   "dependencies": {
     "async": "=2.1.4",
@@ -24,18 +24,17 @@
     "commander": "=2.9.0",
     "compression": "=1.6.2",
     "cors": "=2.8.1",
-    "decompress-zip": "https://github.com/LiskHQ/decompress-zip/tarball/master",
+    "decompress-zip": "https://github.com/ShiftProject/decompress-zip/tarball/master",
     "ejs": "=2.5.5",
     "express": "=4.14.1",
     "express-domain-middleware": "=0.1.0",
     "express-query-int": "=1.0.1",
     "express-rate-limit": "=2.6.0",
-    "extend": "=3.0.0",
-    "ip": "https://github.com/ShiftNrg/node-ip/tarball/master",
+    "extend": "=3.0.2",
+    "ip": "https://github.com/ShiftProject/node-ip/tarball/master",
     "json-schema": "=0.2.3",
-    "json-sql": "https://github.com/LiskHQ/json-sql/tarball/master",
-    "lisk-sandbox": "https://github.com/ShiftNrg/lisk-sandbox/tarball/master",
-    "lodash": "=4.17.5",
+    "json-sql": "https://github.com/ShiftProject/json-sql/tarball/master",
+    "lodash": "=4.17.13",
     "method-override": "=2.3.10",
     "nan": "=2.2.1",
     "npm": "=2.15.10",
@@ -47,6 +46,7 @@
     "redis": "=2.7.1",
     "rimraf": "=2.5.4",
     "semver": "=5.3.0",
+    "shift-sandbox": "https://github.com/ShiftProject/shift-sandbox/tarball/master",
     "socket.io": "=1.7.2",
     "sodium": "=1.2.3",
     "strftime": "=0.10.0",
